blue/templates/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue-website
  labels:
    app: blue-website
    color: blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blue-website
      color: blue
  template:
    metadata:
      labels:
        app: blue-website
        color: blue
    spec:
      containers:
        - name: blue
          image: "lukaosmani/website-blue:v1.0.0"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
