blue/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blue-website
  labels:
    app: blue-website
    color: blue
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: blue-website
    color: blue
